concord_examples/tests/ui/unknown_vars_reference.stderr
error: unknown client var `cx.missing`
 --> tests/ui/unknown_vars_reference.rs:8:24
  |
8 |             "x" = vars.missing // ERROR: unknown vars entry
  |                        ^^^^^^^
